@@ -10,7 +10,7 @@ MICRO_VERSION=1
 INTERFACE_AGE=1
 BINARY_AGE=1
 EXTRA_VERSION=
-BUILD_REVISION=1118
+BUILD_REVISION=1119
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION
 
 dnl define if this is a development release
