@@ -1,5 +1,12 @@
 2011-06-10
 
+	* src/compose.c
+	  plugin/test/test.c: changed the spec of compose-send signal
+	  because the previous one prohibited sending if the signal is not
+	  used.
+
+2011-06-10
+
 	* src/textview.c: added border line before and after headers.
 	  Made attachments display more graphical.
 
